--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="poke"></div>
     </div>
 
-    <script src="">
+    <script>
       const fetchPokeList = (url) => {
         fetch(url)
           .then((res) => res.json())
